# chip8

./: .gitignore  CHIP8  CMakeLists.txt  LICENSE  Makefile  README.md  chip8_wasm.c  firebase.json  main.c
core/: CHIP-8.c  CHIP-8.h  instructions.c  instructions.h
web/: 404.html  app.js  index.html
